@@ -9,12 +9,9 @@
 </head>
 <body>
 <div align="center"><img src="jail-banner.png" alt=
-"Just Another Interpreted Language"> <a href=
-"http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
-width="210" height="62" border="0" align="right" alt=
-"SourceForge.net Logo"></a></div>
-<table style="width: 100%;">
+"Just Another Interpreted Language">
+</div>
+<table style="width: 100%"> 
 <tbody>
 <tr>
 <td style="width: 20%;" valign="top">
@@ -130,3 +127,19 @@ exceptions, ranging from division-by-zero to access violations. For
 this, the JailVM will use user-provided callback functions, which
 will be called in a similar way to signal handlers. These can
 either be written in Jail or in some other language.</p>
+</div>
+</td>
+<td width="210" valign="top">
+<a href=
+"http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
+width="210" height="62" border="0" align="right" alt=
+"SourceForge.net Logo"></a>
+</td>
+</tr>
+</tbody>
+</table>
+<br>
+<br>
+</body>
+</html>
