@@ -9,12 +9,9 @@
 </head>
 <body>
 <div align="center"><img src="jail-banner.png" alt=
-"Just Another Interpreted Language"> <a href=
-"http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
-width="210" height="62" border="0" align="right" alt=
-"SourceForge.net Logo"></a></div>
-<table style="width: 100%;">
+"Just Another Interpreted Language">
+</div>
+<table style="width: 100%"> 
 <tbody>
 <tr>
 <td style="width: 20%;" valign="top">
@@ -39,3 +36,19 @@ Ruby, Python, or some other interpreted language in stead.</p>
 <p>If you came here looking to join the effort of defining a new
 interpreted language with ambitous goals, you're exactly where
 you're supposed to be.</p>
+</div>
+</td>
+<td width="210" valign="top">
+<a href=
+"http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
+width="210" height="62" border="0" align="right" alt=
+"SourceForge.net Logo"></a>
+</td>
+</tr>
+</tbody>
+</table>
+<br>
+<br>
+</body>
+</html>
