@@ -9,12 +9,9 @@
 </head>
 <body>
 <div align="center"><img src="jail-banner.png" alt=
-"Just Another Interpreted Language"> <a href=
-"http://sourceforge.net"><img src=
-"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
-width="210" height="62" border="0" align="right" alt=
-"SourceForge.net Logo"></a></div>
-<table style="width: 100%;">
+"Just Another Interpreted Language">
+</div>
+<table style="width: 100%"> 
 <tbody>
 <tr>
 <td style="width: 20%;" valign="top">
@@ -48,3 +45,19 @@ Soft typing: new keywords, inheritance, etc.</a>
 The original message can be found <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2827560&forum_id=34463">here</a><br>
 The grammar being discussed is <a href="http://cvs.sourceforge.net/cgi-bin/viewcvs.cgi/jail-ust/compiler/parse.y?rev=1.1&content-type=text/vnd.viewcvs-markup">here</a><br>
 </p>
+</div>
+</td>
+<td width="210" valign="top">
+<a href=
+"http://sourceforge.net"><img src=
+"http://sourceforge.net/sflogo.php?group_id=85312&amp;type=5"
+width="210" height="62" border="0" align="right" alt=
+"SourceForge.net Logo"></a>
+</td>
+</tr>
+</tbody>
+</table>
+<br>
+<br>
+</body>
+</html>
