@@ -1,3 +1,14 @@
+2003-09-04	blytkerchan
+	* design.html: change layout to make room for SF logo
+	* how_you_can_help.html: ditto
+	* progress.html: ditto
+	* empty.html: ditto
+	* index.html: ditto
+	* table.html: ditto
+	* goals.html: ditto
+	* intended_audience.html: ditto
+	* tech_arch.html: ditto
+
 2003-09-02	blytkerchan
 	* grammar.msg: removed
 
